# rust-diesel-juniper-webapp

./: .env  Cargo.toml
migrations/2022-01-28-223415_init_tables/: down.sql  up.sql
src/: main.rs  schema.rs
src/graphql/: common.rs  context.rs  mod.rs  mutation.graphql  mutation.rs  post.rs  query.graphql  query.rs  user.graphql  user.rs
src/graphql/schema/: post.graphql  query.graphql
src/models/: mod.rs  posts.rs  users.rs
