[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-cors = "0.1.0"
juniper = "0.14.1"
juniper-from-schema = "0.5.1"
juniper-eager-loading = "0.5.0"
diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.7"
dotenv = "0.15.0"
futures01 = "0.1.31"
itertools = "0.10.3"
serde_json = "1.0.78"
chrono = "0.4.19" 
